--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.administrator.android_training_course">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
     <!-- NFC权限 -->
     <uses-permission android:name="android.permission.NFC" />
     <!--写SD卡权限-->
