feat:添加BitmapUtil,Bitmap压缩的工具类

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -92,7 +92,8 @@
         <activity android:name=".photo.PhotoActivity" />
         <activity android:name=".photo.VideoActivity" />
         <activity android:name=".photo.CameraActivity" />
-        <activity android:name=".print.PrintActivity"></activity>
+        <activity android:name=".print.PrintActivity" />
+        <activity android:name=".bitmap.BitmapActivity"></activity>
     </application>
 
 </manifest>
